@startuml

' skinparam handwritten true
'skinparam defaultFontName Jetbrains Mono
skinparam packageStyle frame
skinparam packageBackgroundColor #EEEEEE
skinparam classBackgroundColor Wheat|CornflowerBlue

!define FINAL &#123;final&#125;

package jpsave.airbnb.utilisateurs {
    class Personne {
        - <b>prenom</b> : String
        - <b>nom</b> : String
        - <b>age:</b> : int

        + <b>Personne</b> (String, String, int)

        + <b>afficher</b> () : void
    }
    class Hote {
        - <b>{static}DELAI_REPONSE_STANDARD</b> : int\t FINAL
        - <b>delaiDeReponse</b> : int

        + <b>Hote</b> (String, String, int, int)
        + <b>Hote</b> (String, String, int)

        + <b>afficher</b> () : void
    }
    class Voyageur {

        + <b>Voyageur</b> (String, String, int)
    }
}
package jpsave.airbnb.logements {
    abstract class Logement {
        - <b>hote</b> : Hote
        - <b>tarifParNuit</b> : int
        - <b>adresse</b> : String
        - <b>superficie</b> : int
        - <b>nbVoyageursMax</b> : int
        __
        + <b>Logement</b> (Hote, int, String, int, int)
        ..
        + <b>{abstract}getSuperficieTotal</b> () : int
        + <b>{abstract}afficher</b> () : void
        ..Getter..
        + <b>getTarifParNuit</b> () : int
        + <b>getHote</b> () : Hote
        + <b>getAdresse</b> () : String
        + <b>getSuperficie</b> () : int
        + <b>getNbVoyageursMax</b> () : int
    }
    class Appartement {
        - <b>numeroEtage</b> : int
        - <b>superficieBalcon</b> : int

        + <b>Appartement</b> (Hote, int, String, int, int, int, int)

        + <b>getSuperficieTotal</b> () : int
        + <b>afficher</b> () : void
    }
    class Maison {
        - <b>superficieJardin</b> : int
        - <b>possedePiscine</b> : boolean

        + <b>Maison</b> (Hote, int, String, int, int, int, boolean)

        + <b>getSuperficieTotal</b> () : int
        + <b>afficher</b>() : void
    }
}
package jpsave.airbnb.reservations {
    interface SejourInterface {
        + <b>verificationDateArrivee</b> () : boolean
        + <b>verificationNombreDeNuits</b> () : boolean
        + <b>verificationNombreDeVoyageurs</b> () : boolean
        + <b>afficher</b> () : void
    }
    interface ConditionsTarifairesInterface {
        + <b>beneficiePromotion</b> () : boolean
        + <b>getTarif</b> () : int
    }
    abstract class Sejour {
        - <b>dateArrivee</b> : Date
        - <b>nbVoyageurs</b> : int
        # <b>logement</b> : Logement
        # <b>nbNuits</b> : int
        # <b>tarif</b> : int
        __
        + <b>Sejour</b> (Date, int, Logement, int)
        ..
        + <b>{abstract}miseAJourDuTarif</b> () : int
        ..
        + <b>verificationDateArrivee</b> () : boolean
        + <b>verificationNombreDeVoyageurs</b> () : boolean
        + <b>afficher</b> () : void
    }
    class SejourCourt {
        + <b>SejourCourt</b> (Date, int, Logement, int)

        + <b>verificationNombreDeNuits</b> () : boolean
        + <b>beneficiePromotion</b> () : boolean
        + <b>miseAJourDuTarif</b> () : void
        + <b>getTarif</b> () : int
        + <b>afficher</b> () : void
    }
    class SejourLong {
        - <b>{static}PROMOTION_EN_POURCENTAGE</b> : int\t FINAL
        - <b>promotion</b> : int

        + <b>SejourLong</b> (Date, int, Logement, int)

        + <b>verificationNombreDeNuits</b> () : boolean
        + <b>beneficiePromotion</b> () : boolean
        + <b>miseAJourDuTarif</b> () : void
        + <b>getTarif</b> () : int
        + <b>afficher</b> () : void
    }
    class Reservation {
        - <b>{static}nbIdentifiants</b> : int
        - <b>identifiant</b> : int
        - <b>sejour</b> : Sejour
        - <b>voyageur</b> : Voyageur
        - <b>estValidee</b> : boolean
        - <b>dateDeReservation</b> : Date

        + <b>Reservation</b> (Sejour, Voyageur, Date)

        + <b>afficher</b> () : void
    }
}

package jpsave.airbnb.outils #AAAAAA {
    class MaDate {
        - <b>{static}STRING_MADATE_FORMAT</b> : String\t FINAL
        - <b>{static}MADATE_FORMAT</b> : SimpleDateFormat\t FINAL
        - <b>{static}PATTERN_MADATE</b> : Pattern\t\t\t\t FINAL

        + <b>MaDate</b> (String)
        + <b>MaDate</b> (int, int, int)

        - {static}<b>dateStringCheckAndConvert</b> (String) : String
        + <b>toString</b> () : String
    }
}
package java.util #555555 {
    class Date {}
}
Date <|-- MaDate

Hote --|>  Personne
Voyageur -|>  Personne
Maison --|>  Logement
Appartement --|>  Logement
Hote "1" -- "0..n" Logement
Voyageur "1" -- "0..n" Reservation
Logement "1" -- "0..n" Sejour
Reservation "1" -- "1..n" Sejour
Sejour - SejourInterface
Sejour <|-- SejourCourt
Sejour <|-- SejourLong
SejourCourt -down- ConditionsTarifairesInterface
SejourLong - ConditionsTarifairesInterface

@enduml